<resources>
    <string name="app_name">FOOZIE_APP</string>
    <string name="forGetPass"><u>Quên mật khẩu?</u></string>
    <string name="signUp"><u>Đăng ký</u></string>
    <string name="signIn"><u>Đăng nhập</u></string>
    <string name="action_home">Trang chủ</string>
    <string name="action_activity">Hoạt động</string>
    <string name="action_notifications">Thông báo</string>
    <string name="action_gift">Quà tặng</string>
    <string name="action_acc">Tài khoản</string>

    <!--  URL HOST OF API  -->
    <string name="api_url">https://food.vinhphancommunity.xyz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="default_notification_channel_id">Foozie_channel</string>
    <string name="localStoreName">Foozie</string>
</resources>