<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:title="@string/action_home"
        android:icon="@drawable/home"/>
    <item
        android:id="@+id/action_activity"
        android:title="@string/action_activity"
        android:icon="@drawable/activity"/>
    <item
        android:id="@+id/action_notifications"
        android:title="@string/action_notifications"
        android:icon="@drawable/notifications"/>
    <item
        android:id="@+id/action_gift"
        android:title="@string/action_gift"
        android:icon="@drawable/discount"/>
    <item
        android:id="@+id/action_account"
        android:title="@string/action_acc"
        android:icon="@drawable/account"/>
</menu>